--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "pg": "^8.16.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.69.0",
+    "react-movable": "^3.4.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
