--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@tiptap/core": "^3.14.0",
+    "@tiptap/extension-drag-handle-react": "^3.14.0",
+    "@tiptap/extension-placeholder": "^3.14.0",
+    "@tiptap/extension-table-of-contents": "^3.14.0",
+    "@tiptap/pm": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "jose": "^6.1.3",
@@ -31,6 +38,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/bcrypt": "^6.0.0",
     "@types/node": "^25",
     "@types/pg": "^8.16.0",
