--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@prisma/client": "^7.2.0",
     "@tiptap/core": "^3.14.0",
     "@tiptap/extension-drag-handle-react": "^3.14.0",
+    "@tiptap/extension-image": "^3.14.0",
+    "@tiptap/extension-link": "^3.14.0",
     "@tiptap/extension-placeholder": "^3.14.0",
     "@tiptap/extension-table-of-contents": "^3.14.0",
     "@tiptap/pm": "^3.14.0",
